# Root

./: CMakeLists.txt  Makefile  README.md
data/: poly.ans  poly.out  poly.raw  poly_deg_1_20.out  poly_simple.in  poly_single.in
doc/: bisection.tex  main.aux  main.out  main.tex  main.toc  optimization.tex  pendulum.sty  prepare.tex  realroot_isolation.tex  reinterpret.cpp  sturm_newton.tex  summary.tex  test.tex
include/: Bisection.h  CP_Root.h  CP_RootQuadratic.h  CP_RootQuadraticTest.h  Sturm-Newton.h  VAG.h  VAS.h  testlib.h
include/mps/: mt.h  version.h
lib/: libgmp.la  libgmp.lai  libgmp.libcmd  libgmpxx.la  libgmpxx.lai
src/: CMakeLists.txt  CP_Root.cpp  CP_RootAnother.cpp  CP_RootMain.cpp  CP_RootQuadratic.cpp  CP_RootSturmNewton.cpp  VAG.cpp  VAS.cpp  testlib.cpp
test/: CMakeLists.txt  CP_RootMain.cpp  CP_RootMainAnother.cpp  genPoly.cpp  testMain.cpp  testVAG.cpp  testVAS.cpp
